# Ludo_lista_enlazada

./: README.md  helloworld.c
practca_sfml/: CMakeLists.txt  CMakeLists2.txt  Casilla.cpp  Casilla.h  Dado.cpp  Dado.h  Ficha.cpp  Ficha.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  Nodo.cpp  Nodo.h  Recorrido.cpp  Recorrido.h  Tablero.cpp  Tablero.h  main.cpp
